<resources>
    <string name="app_name">Success</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to sign up -->
    <string name="sign_up_title">회원 가입</string>
    <string name="email_txt">이메일 주소</string>
    <string name="pwd_txt">비밀번호</string>
    <string name="pwd_confirm_txt">비밀번호 확인</string>
    <string name="sign_up_cancel">취소</string>
    <string name="sign_up_confirm">확인</string>

    <!-- Strings related to MainActivity -->
    <string name="main_drawer_title">알림 사이트 선택</string>
    <string name="main_drawer_cancel">취소</string>
    <string name="main_drawer_confirm">확인</string>

    <!--String related to StashActivity-->
    <string name="backarrow">←</string>
    <string name="stash">보관함</string>
    <string name="edit">편집하기</string>
    <string name="delete">삭제하기</string>
    <string name="SKKU">SKKU home</string>
    <string name="College">College home</string>
    <string name="JOB">Job</string>
</resources>
